force-app/main/default/objects/Property__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <label>Beneficiary</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>