force-app/main/default/objects/Property__c/fields/Date_Deed_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Deed_Received__c</fullName>
    <label>Date Deed Received</label>
    <type>Date</type>
</CustomField>