force-app/main/default/objects/Property__c/fields/Occupied_by_Someone_Other_than_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Occupied_by_Someone_Other_than_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Occupied by Someone Other than Applicant</label>
    <type>Checkbox</type>
</CustomField>