force-app/main/default/objects/Property__c/fields/Used_as_Rental_Income__c.field-meta.xml
<CustomField>
    <fullName>Used_as_Rental_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used as Rental Income</label>
    <type>Checkbox</type>
</CustomField>