force-app/main/default/objects/Property__c/fields/Vacant_Pending_Sale__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Pending_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vacant Pending Sale</label>
    <type>Checkbox</type>
</CustomField>