force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Status__c</columns>
    <columns>Street_Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Used_as_Rental_Income__c</columns>
    <columns>Vacant_Pending_Sale__c</columns>
    <columns>Property_Notes__c</columns>
    <columns>Date_Deed_Received__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>